фиксы: текста, верстка

--- a/src/blocks/also-you-get/also-you-get.pug
+++ b/src/blocks/also-you-get/also-you-get.pug
@@ -4,28 +4,28 @@
             h2.section-h2-title Также вы получаете
             +tile-gallery([
                 {
-                    title: 'Экономьте время',
-                    text: 'Больше вам не нужно тратить время и усилия на поиск заказов, мы сами подберем заказ именно под ваш уровень умений',
+                    title: 'Опыт',
+                    text: 'Пользуясь услугами Light Start вы получаете опыт, который вам поможет сделать портфолио, обогатить карман увеличивая ценник за свои работы, как следствие стать более компетентным в своей области',
                     imgPath: '../img/experience.svg'
                 },
                 {
-                    title: 'Исключите риски провала',
-                    text: 'Основная фишка Light Start это кураторы, которые не оставят вас одних при сложных моментах. Вы в любой момент можете обратиться за помощью',
+                    title: 'Портфолио',
+                    text: 'Это то что очень сложно получить новичкам на фрилансе, мы не только сможем найти вам оплаченные первые заказы, но и хорошо заполняющие заказы для вашего портфолио.',
                     imgPath: '../img/resume.svg'
                 },
                 {
-                    title: 'Производите. Забудьте о продажах',
-                    text: 'Наша задача предоставить вам возможность заниматься любимым делом на фрилансе с минимальными  затратами',
+                    title: 'Клиентская база',
+                    text: 'Самый важный пункт на который у клиентов уходят большие ресурсы, мы берём на себя.',
                     imgPath: '../img/crm.svg'
                 },
                 {
-                    title: 'Исключите риски провала',
-                    text: 'Основная фишка Light Start это кураторы, которые не оставят вас одних при сложных моментах. Вы в любой момент можете обратиться за помощью',
+                    title: 'Высокие показатели дохода',
+                    text: 'Мы тщательно подходим к тем заказам которые передаём вам, они имеют идеальное соотношение ценника/потраченных сил',
                     imgPath: '../img/money-bag.svg'
                 },
                 {
-                    title: 'Производите. Забудьте о продажах',
-                    text: 'Наша задача предоставить вам возможность заниматься любимым делом на фрилансе с минимальными  затратами',
+                    title: 'Экономия времени и нервов',
+                    text: 'Инвестируя в нас вы открываете для себя много свободного времени без переживаний',
                     imgPath: '../img/meditate.svg'
                 },
             ])
