--- a/src/blocks/save-your-time/save-your-time.pug
+++ b/src/blocks/save-your-time/save-your-time.pug
@@ -1,11 +1,11 @@
 +section-column({
     title: 'Экономьте время',
-    description: 'Больше вам не нужно тратить время и усилия на поиск заказов, мы сами подберем заказ именно под ваш уровень умений',
+    description: 'Больше вам не нужно тратить время и усилия на поиск заказов, мы сами подберем заказ под ваш уровень умений',
     imgSrc: '../img/Time management-bro.svg'
 })
 +section-column({
     title: 'Исключите риски провала',
-    description: 'Основная фишка Light Start это кураторы, которые не оставят вас одних при сложных моментах. Вы в любой момент можете обратиться за помощью',
+    description: 'Основная фишка Light Start это кураторы, к которым вы можете обратиться, когда столкнулись с трудностями. Или просто за любым советом.',
     imgSrc: '../img/No data-bro.svg'
 })
 +section-column({
