--- a/src/blocks/services/services.pug
+++ b/src/blocks/services/services.pug
@@ -5,27 +5,27 @@ section.without-columns.section-column.section#services
             .card-list
                 +card(
                     'Студент',
-                    'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
-                    '3000 ₽',
-                    '1200 ₽',
-                    '3 месяца',
+                    'Идеальный вариант, если у вас нет портфолио и вы не уверены, что готовы выйти на фриланс. Мы найдем вам ваши первые заказы и поможем с их выполнением.',
+                    '3 990 ₽',
+                    '990 ₽',
+                    '1 неделя',
                     'Купить',
                     'orange'
                 )
                 +card(
                     'Профессионал',
-                    'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
-                    '5900 ₽',
-                    '3000 ₽',
-                    '3 месяца',
+                    'Если вы готовы зарабатывать по крупному и сделать фриланс вашей основной работой, то это ваш выбор.',
+                    '9 900 ₽',
+                    '3 990 ₽',
+                    '1 месяц',
                     'Купить',
                     'purple'
                 )
                 +card(
                     'Учёный',
-                    'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
-                    '10000 ₽',
-                    '6900 ₽',
+                    'Если вы полностью уверены в себе, вы выполняете более 7 заказов в месяц, и фриланс это ваша жизнь, то «Учёный» — это ваш выбор.',
+                    '14 900 ₽',
+                    '9 900 ₽',
                     '3 месяца',
                     'Купить',
                     'mint'
