--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,4 +1,7 @@
 .card {
+    justify-content: space-between;
+    flex-direction: column;
+    display: flex;
     max-width: 350px;
     padding: 50px;
     box-shadow: 0px 0px 26px 0px rgba(#C3CBE1, 20%);
