feat: mobile burger

--- a/src/blocks/main-block/main-block.pug
+++ b/src/blocks/main-block/main-block.pug
@@ -2,8 +2,10 @@ section.main-block#main
     .main-block__inner.container
         .main-block__left
             .main-block__main-text
-                h1.main-block-cta__title Не можете найти себя во фрилансе?
-                p.main-block-cta__description Больше не нужно тратить время и силы на поиск заказов, вместе с Light Start вы сможете делать больше за меньшее время.
+                h1.main-block-cta__title Начни зарабатывать реальные деньги на 
+                    span.text-blue фрилансе 
+                    span прямо сейчас 
+                p.main-block-cta__description Помогаем начинающим фрилансерам найти и выполнить свои первые заказы, а профессиональных фрилансеров обеспечиваем стабильным потоком заказов.
                 +button('Подать заявку', 'primary')
         .main-block__right
             img(src="../img/Freelancer-bro.svg")
