--- a/src/blocks/save-your-time/save-your-time.pug
+++ b/src/blocks/save-your-time/save-your-time.pug
@@ -1,15 +1,15 @@
 +section-column({
     title: 'Экономьте время',
-    description: 'Больше вам не нужно тратить время и усилия на поиск заказов, мы сами подберем заказ под ваш уровень умений',
+    description: 'С нами вам не нужно тратить время и силы на поиск заказов, мы сами подберем заказ под ваш уровень умений',
     imgSrc: '../img/Time management-bro.svg'
 })
 +section-column({
     title: 'Исключите риски провала',
-    description: 'Основная фишка Light Start это кураторы, к которым вы можете обратиться, когда столкнулись с трудностями. Или просто за любым советом.',
+    description: 'Основная фишка Light Start — это кураторы, к которым вы можете обратиться, если столкнулись с трудностями или просто нужен совет в развитии.',
     imgSrc: '../img/No data-bro.svg'
 })
 +section-column({
-    title: 'Производите. Забудьте о продажах',
-    description: 'Наша задача предоставить вам возможность заниматься любимым делом на фрилансе с минимальными  затратами',
+    title: 'Творите. Забудьте о продажах',
+    description: 'Наша задача — освободить вас от оков менеджмента и дать вам возможность заниматься любимым делом на фрилансе',
     imgSrc: '../img/Website Creator-bro.svg'
 })
