--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -36,12 +36,13 @@
     font-size: 16px;
     font-weight: 700;
 
-    &:active {
-        transform: translateY(0px);
-        transition: all .3s, transform .1s;
-    }
 
     &:hover {
-        transform: translateY(1px);
+        transform: translateY(-2px);
+        &:active,
+        &:focus {
+            transform: translateY(0px);
+            transition: all .3s, transform .1s;
+        }
     }
 }
