--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import '/src/normolize.scss';
 @import '/src/utils/media-queries.scss';
 @import '/src/utils/indents.scss';
 @import '/src/base.scss';
