--- a/src/base.scss
+++ b/src/base.scss
@@ -46,6 +46,10 @@ h5 {font-size: 18px;}
 	display: none;
 }
 
+.wrapper {
+	position: relative;
+}
+
 .link {
 	color: #fff;
 	transition: color .1s;
