--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -37,6 +37,10 @@
             border: 1px solid #333;
             box-shadow: 4px 4px 10px 0 rgba(#333, 10%);
         }
+
+        &::placeholder {
+            color: #999;
+        }
     }
 
     .form__submit-button button {
