--- a/src/components/price/price.pug
+++ b/src/components/price/price.pug
@@ -1,5 +1,6 @@
 mixin price(data)
     .price
-        .price-old= data.old
+        if data.old
+            .price-old= data.old
         .price-current= data.current
             span.price-duration= data.duration
